Implemented basic threading to separate graphics and physics, improved physics calculations